[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
egui = "0.19.0"
egui-macroquad = "0.12.0"
egui_extras = "0.19.0"
macroquad = "0.3.24"
rng = {version = "0.8.5", package="rand"}
